NBNP-215 Add/configure holding field to Search Views

--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -214,6 +214,59 @@ display:
             multi_separator: ', '
           entity_type: node
           plugin_id: search_api_field
+        holdings:
+          id: holdings
+          table: search_api_index_solr_newspapers_lib_unb_ca
+          field: holdings
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Holdings
+          exclude: true
+          alter:
+            alter_text: true
+            text: '<span class="holding">{{ holdings }}</span>'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          link_to_item: false
+          use_highlighting: false
+          multi_type: separator
+          multi_separator: ', '
+          plugin_id: search_api
         field_sort_title:
           id: field_sort_title
           table: search_api_index_solr_newspapers_lib_unb_ca
@@ -225,7 +278,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '{{ title }}'
+            text: '{{ title }}{{ holdings }}'
             make_link: false
             path: ''
             absolute: false
