--- a/config-yml/field.field.node.publication.field_editor.yml
+++ b/config-yml/field.field.node.publication.field_editor.yml
@@ -11,7 +11,7 @@ field_name: field_editor
 entity_type: node
 bundle: publication
 label: Editor
-description: ''
+description: "<b>Example:</b> <tt>W.W. Price</tt><br>\r\n<i>Suggested values may pop up as you type</i>"
 required: false
 translatable: false
 default_value: {  }
