--- a/config-yml/field.field.node.publication.field_family.yml
+++ b/config-yml/field.field.node.publication.field_family.yml
@@ -11,7 +11,7 @@ field_name: field_family
 entity_type: node
 bundle: publication
 label: 'Family Name'
-description: '<b>Example:</b> The Telegraph Journal'
+description: '<b>Example:</b> <tt>The Telegraph Journal</tt>'
 required: false
 translatable: false
 default_value: {  }
