--- a/config-yml/field.field.node.publication.field_geographic_coverage.yml
+++ b/config-yml/field.field.node.publication.field_geographic_coverage.yml
@@ -10,7 +10,7 @@ field_name: field_geographic_coverage
 entity_type: node
 bundle: publication
 label: 'Geographic Coverage'
-description: '<b>Example:</b> Chatham (and later Richibucto)'
+description: '<b>Example:</b> <tt>Chatham (and later Richibucto)</tt>'
 required: false
 translatable: false
 default_value: {  }
