--- a/config-yml/field.field.node.publication.field_marc_frequency.yml
+++ b/config-yml/field.field.node.publication.field_marc_frequency.yml
@@ -12,7 +12,7 @@ field_name: field_marc_frequency
 entity_type: node
 bundle: publication
 label: Frequency
-description: 'Controlled list of MARC Frequency of Issue terms'
+description: 'Publication frequency terms based on MARC <i>Frequency of Issue Term List</i>.'
 required: false
 translatable: false
 default_value: {  }
