NBNP-191 Adjust Newspaper Admin role permissions

--- a/config-yml/user.role.newspaper_administrator.yml
+++ b/config-yml/user.role.newspaper_administrator.yml
@@ -7,7 +7,12 @@ label: 'Newspaper Administrator'
 weight: 3
 is_admin: null
 permissions:
+  - 'access content overview'
   - 'access toolbar'
+  - 'add digital serial title entities'
+  - 'add serial holding entities'
+  - 'add serial issue entities'
+  - 'add serial page entities'
   - 'administer digital serial title entities'
   - 'administer serial issue entities'
   - 'administer serial page entities'
@@ -15,6 +20,16 @@ permissions:
   - 'create terms in editor'
   - 'create terms in family'
   - 'create terms in publisher'
-  - 'delete any publication content'
+  - 'delete own page content'
   - 'edit any publication content'
+  - 'edit digital serial title entities'
+  - 'edit serial holding entities'
+  - 'edit serial issue entities'
   - 'edit serial page entities'
+  - 'edit terms in publisher'
+  - 'use text format full_html'
+  - 'view own unpublished content'
+  - 'view unpublished digital serial title entities'
+  - 'view unpublished serial holding entities'
+  - 'view unpublished serial issue entities'
+  - 'view unpublished serial page entities'
