--- a/config-yml/facets.facet.language.yml
+++ b/config-yml/facets.facet.language.yml
@@ -13,7 +13,7 @@ url_alias: language
 weight: 0
 min_count: 1
 show_only_one_result: false
-field_identifier: field_language
+field_identifier: field_language_facet
 facet_source_id: 'search_api:views_page__search__search_page'
 widget:
   type: checkbox
