--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -166,7 +166,7 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_issn
-  field_language:
+  field_language_facet:
     label: 'Facet »Language'
     datasource_id: 'entity:node'
     property_path: field_language
