NBNP-228 Add breadcrumbs for entity deletes and creates

--- a/custom/modules/serials/modules/serial_holding/serial_holding.services.yml
+++ b/custom/modules/serials/modules/serial_holding/serial_holding.services.yml
@@ -3,3 +3,7 @@ services:
     class: Drupal\serial_holding\Routing\EditHoldingRouteSubscriber
     tags:
     - { name: event_subscriber }
+  serial_holding.breadcrumb:
+    class: Drupal\serial_holding\SerialHoldingBreadcrumbBuilder
+    tags:
+    - { name: breadcrumb_builder, priority: 100 }
