--- a/config-yml/ldap_user.settings.yml
+++ b/config-yml/ldap_user.settings.yml
@@ -1,21 +1,24 @@
-drupalAcctProvisionServer: '0'
-ldapEntryProvisionServer: '0'
+drupalAcctProvisionServer: unb_libraries_ldap
+ldapEntryProvisionServer: null
 drupalAcctProvisionTriggers:
-  drupal_on_login: '0'
-  drupal_on_update_create: '0'
+  drupal_on_login: drupal_on_login
+  drupal_on_update_create: drupal_on_update_create
 ldapEntryProvisionTriggers:
   ldap_on_update_create: '0'
   ldap_on_login: '0'
   ldap_on_delete: '0'
   drupal_on_manual_creation: '0'
 userUpdateCronQuery: none
-userUpdateCronInterval: daily
-orphanedDrupalAcctBehavior: ldap_user_orphan_email
+userUpdateCronInterval: monthly
+orphanedDrupalAcctBehavior: ldap_user_orphan_do_not_check
 orphanedCheckQty: 100
 orphanedAccountCheckInterval: weekly
 userConflictResolve: resolve
-manualAccountConflict: conflict_reject
-acctCreation: ldap_behaviour
-ldapUserSyncMappings: {  }
+manualAccountConflict: conflict_show_option
+acctCreation: user_settings_for_ldap
+ldapUserSyncMappings:
+  drupal: {  }
+  ldap: {  }
 _core:
   default_config_hash: hjgcuHpcsme6SW-7MKpZm3bhnR76f1yX2Y8Xe0STesw
+disableAdminPasswordField: false
