--- a/config-yml/user.role.newspaper_administrator.yml
+++ b/config-yml/user.role.newspaper_administrator.yml
@@ -19,6 +19,7 @@ permissions:
   - 'create terms in family'
   - 'create terms in publisher'
   - 'delete own page content'
+  - 'delete serial holding entities'
   - 'edit any publication content'
   - 'edit digital serial title entities'
   - 'edit serial holding entities'
@@ -27,6 +28,7 @@ permissions:
   - 'edit terms in publisher'
   - 'use text format full_html'
   - 'view own unpublished content'
+  - 'view published serial holding entities'
   - 'view unpublished digital serial title entities'
   - 'view unpublished serial holding entities'
   - 'view unpublished serial issue entities'
