NBNP-191 Fix Add holding button access for Newspaper Admin

--- a/custom/modules/serials/modules/serial_holding/serial_holding.routing.yml
+++ b/custom/modules/serials/modules/serial_holding/serial_holding.routing.yml
@@ -13,4 +13,4 @@ serial_holding.add_holding:
     _entity_form: serial_holding.add
     _title: 'Add Serial Holding'
   requirements:
-    _permission: 'view content'
+    _permission: 'add serial holding entities'
