NBNP-228 Add Manage Holdings breadcrumb class+service

--- a/custom/modules/serials/modules/serial_holding/serial_holding.services.yml
+++ b/custom/modules/serials/modules/serial_holding/serial_holding.services.yml
@@ -7,3 +7,7 @@ services:
     class: Drupal\serial_holding\SerialHoldingBreadcrumbBuilder
     tags:
     - { name: breadcrumb_builder, priority: 100 }
+  serial_holding.manage_breadcrumb:
+    class: Drupal\serial_holding\SerialManageHoldingsBreadcrumbBuilder
+    tags:
+    - { name: breadcrumb_builder, priority: 100 }
