NBNP-229 Add digital holding for Penny Dip on local builds

--- a/content/instance_initial_content/instance_initial_content.services.yml
+++ b/content/instance_initial_content/instance_initial_content.services.yml
@@ -31,3 +31,7 @@ services:
     class: Drupal\instance_initial_content\Event\PageMigrateEvent
     tags:
       - { name: event_subscriber }
+  instance_initial_content.2_digital_title_migrate_subscriber:
+    class: Drupal\instance_initial_content\Event\DigitalTitleMigrateEvent
+    tags:
+      - { name: event_subscriber }
