NBNP-131 Add edge case title ascending sort: language/holdings facets

--- a/config-yml/facets.facet.language.yml
+++ b/config-yml/facets.facet.language.yml
@@ -43,6 +43,12 @@ processor_configs:
       sort: 30
     settings:
       sort: DESC
+  display_value_widget_order:
+    processor_id: display_value_widget_order
+    weights:
+      sort: 40
+    settings:
+      sort: ASC
   list_item:
     processor_id: list_item
     weights:
