--- a/config-yml/facets.facet.holdings.yml
+++ b/config-yml/facets.facet.holdings.yml
@@ -43,6 +43,12 @@ processor_configs:
       sort: 30
     settings:
       sort: DESC
+  display_value_widget_order:
+    processor_id: display_value_widget_order
+    weights:
+      sort: 40
+    settings:
+      sort: ASC
   url_processor_handler:
     processor_id: url_processor_handler
     weights:
