NBNP-211 Add export holdings menu item to user account menu

--- a/custom/modules/newspapers_core/newspapers_core.routing.yml
+++ b/custom/modules/newspapers_core/newspapers_core.routing.yml
@@ -6,7 +6,7 @@ newspapers_core.home:
   requirements:
     _permission: 'access content'
 
-newspapers_core.export:
+newspapers_core.export_holdings:
   path: '/export/holdings'
   defaults:
     _controller: '\Drupal\newspapers_core\Controller\ExportHoldingsController::exportHoldings'
