--- a/config-yml/field.field.node.publication.field_family.yml
+++ b/config-yml/field.field.node.publication.field_family.yml
@@ -11,7 +11,7 @@ field_name: field_family
 entity_type: node
 bundle: publication
 label: 'Family Name'
-description: '<b>Example:</b> <tt>The Telegraph Journal</tt>'
+description: "<b>Example:</b> <tt>The Telegraph Journal</tt><br>\r\n<i>Suggested values may pop up as you type</i>"
 required: false
 translatable: false
 default_value: {  }
