--- a/config-yml/block.block.country_2.yml
+++ b/config-yml/block.block.country_2.yml
@@ -1,29 +1,29 @@
-uuid: 6b999f04-1cc8-42ff-806d-db27f8388b7d
+uuid: e16ee20f-6024-451f-bf2d-76c9ceaada1a
 langcode: en
 status: true
 dependencies:
   config:
-    - facets.facet.publication_title
+    - facets.facet.archives_country
   module:
     - facets
     - system
   theme:
     - newspapers_lib_unb_ca
-id: publicationtitle
+id: country_2
 theme: newspapers_lib_unb_ca
 region: sidebar_first
-weight: -10
+weight: -9
 provider: null
-plugin: 'facet_block:publication_title'
+plugin: 'facet_block:archives_country'
 settings:
-  id: 'facet_block:publication_title'
-  label: 'Publication Title'
+  id: 'facet_block:archives_country'
+  label: Country
   provider: facets
   label_display: '0'
-  block_id: publicationtitle
+  block_id: country_2
 visibility:
   request_path:
     id: request_path
-    pages: '/page-search*'
+    pages: '/page-archives*'
     negate: false
     context_mapping: {  }
