--- a/config-yml/block.block.publicationtitle_2.yml
+++ b/config-yml/block.block.publicationtitle_2.yml
@@ -1,29 +1,29 @@
-uuid: 6b999f04-1cc8-42ff-806d-db27f8388b7d
+uuid: 50f92f3c-fa6a-4f9d-befa-c26a2fe5ae59
 langcode: en
 status: true
 dependencies:
   config:
-    - facets.facet.publication_title
+    - facets.facet.publication_title_facet
   module:
     - facets
     - system
   theme:
     - newspapers_lib_unb_ca
-id: publicationtitle
+id: publicationtitle_2
 theme: newspapers_lib_unb_ca
 region: sidebar_first
-weight: -10
+weight: -6
 provider: null
-plugin: 'facet_block:publication_title'
+plugin: 'facet_block:publication_title_facet'
 settings:
-  id: 'facet_block:publication_title'
+  id: 'facet_block:publication_title_facet'
   label: 'Publication Title'
   provider: facets
   label_display: '0'
-  block_id: publicationtitle
+  block_id: publicationtitle_2
 visibility:
   request_path:
     id: request_path
-    pages: '/page-search*'
+    pages: '/page-archives*'
     negate: false
     context_mapping: {  }
