--- a/config-yml/block.block.publicationdecade.yml
+++ b/config-yml/block.block.publicationdecade.yml
@@ -1,29 +1,29 @@
-uuid: e16ee20f-6024-451f-bf2d-76c9ceaada1a
+uuid: 6d0e632b-c4ac-4fe2-ada9-2af07eb7c402
 langcode: en
 status: true
 dependencies:
   config:
-    - facets.facet.archives_country
+    - facets.facet.publication_decade
   module:
     - facets
     - system
   theme:
     - newspapers_lib_unb_ca
-id: country_2
+id: publicationdecade
 theme: newspapers_lib_unb_ca
 region: sidebar_first
-weight: -9
+weight: 1
 provider: null
-plugin: 'facet_block:archives_country'
+plugin: 'facet_block:publication_decade'
 settings:
-  id: 'facet_block:archives_country'
-  label: Country
+  id: 'facet_block:publication_decade'
+  label: 'Publication Decade'
   provider: facets
   label_display: '0'
-  block_id: country_2
+  block_id: publicationdecade
 visibility:
   request_path:
     id: request_path
-    pages: '/page-archives*'
+    pages: '/serials/browse/*'
     negate: false
     context_mapping: {  }
